# wayfire-plugin

faketile/: PKGBUILD  README.md  meson.build
faketile/metadata/: faketile.xml  meson.build
faketile/src/: faketile.cpp  meson.build
